cluster/apps/network/external-services/base/incus.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: incus
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: https
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: incus
subsets:
  - addresses:
      - ip: ${CONFIG_NFS_SERVER_IP_ADDRESS}
    ports:
      - name: https
        port: 8443
        protocol: TCP
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incus
spec:
  hostnames: ["incus.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: incus
          port: 8443
