cluster/apps/network/external-services/base/omada-controller.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8043
      targetPort: https
  type: ClusterIP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: omada-controller
subsets:
  - addresses:
      - ip: 10.5.0.10
    ports:
      - name: https
        port: 8043
        protocol: TCP
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller
spec:
  hostnames: ["omada.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: omada-controller
          port: 8043
